--- a/lab3/index.html
+++ b/lab3/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Крутой адаптивный дизайн сайта-портфолио</title>
+    <title>Крутой адаптивный дизайн сайта-портфолиоoooooooo</title>
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
